err/gitology.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/gitology'...
Listing './lib/python3.5/site-packages/gitology/d'...
Compiling './lib/python3.5/site-packages/gitology/d/librecaptcha.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (librecaptcha.py, line 61)
Listing './lib/python3.5/site-packages/gitology/d/templatetags'...
Compiling './lib/python3.5/site-packages/gitology/d/themed_template_loader.py'...
***   File "./lib/python3.5/site-packages/gitology/d/themed_template_loader.py", line 13
    print "get_template_sources no threadlocal"
                                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/gitology/document.py'...
***   File "./lib/python3.5/site-packages/gitology/document.py", line 106
    raise DocumentDoesNotExists, "index does not exist"
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gitology/odict.py'...
***   File "./lib/python3.5/site-packages/gitology/odict.py", line 614
    raise TypeError, ('pop expected at most 2 arguments, got %s' %
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gitology/path.py'...
***   File "./lib/python3.5/site-packages/gitology/path.py", line 887
    def mkdir(self, mode=0777):
                            ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/gitology/utils.py'...
***   File "./lib/python3.5/site-packages/gitology/utils.py", line 220
    print "Bad redirect line: ", line
                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/gitology-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
